--- a/todo/src/main/resources/static/index.html
+++ b/todo/src/main/resources/static/index.html
@@ -3,8 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <title>TODO List</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 </head>
 <body>
+	<div id='root' class="container"></div>
 
+	<script src="https://fb.me/react-15.0.1.js"></script>
+	<script src="https://fb.me/react-dom-15.0.1.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+	
+	<!-- For Ajax calls -->
+	<script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
+	
+	<script type="text/babel">
+	var style={
+		display: 'inline'
+	};
+	const Todo = ({todo}) => {
+  		// Each Todo
+  		return (
+			<div style={style}>
+				<div ><a href="#" className="list-group-item" >{todo.title}</a></div>
+
+			</div>
+		);
+	}
+
+	class TodoApp extends React.Component{
+  		constructor(props){
+    		// Pass props to parent class
+    		super(props);
+    		// Set initial state
+    		this.state = {
+      			data: []
+    		}
+    		this.apiUrl = 'http://localhost:8080/todo'
+  		}
+  
+		// Lifecycle method
+  		componentDidMount(){
+    		// Make HTTP reques with Axios
+    		axios.get(this.apiUrl)
+      			.then((res) => {
+        			// Set state with result
+        			this.setState({data:res.data.results});
+      		});
+  		}
+		render() {
+			var todos = this.state.data;
+			console.log(todos);
+    		return (
+				<div><h1> TODO items </h1><hr/>
+                	{todos.map(function(todo, id){
+                    	return <Todo key={ id } todo={todo} />;
+                  	})}
+            	</div>
+				);
+  		}
+
+	}
+
+	ReactDOM.render(
+  		<TodoApp />, document.getElementById('root')
+	);
+</script>
 </body>
 </html>
