--- a/todo/src/main/resources/static/index.html
+++ b/todo/src/main/resources/static/index.html
@@ -12,6 +12,9 @@
 	<script src="https://fb.me/react-dom-15.0.1.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 	
+	<!--Bundled file-->
+    <script src="bundle.js"></script>
+	
 	<!-- For Ajax calls -->
 	<script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
 	
