--- a/todo/src/main/resources/static/index.html
+++ b/todo/src/main/resources/static/index.html
@@ -2,21 +2,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TODO List</title>
+<title>TODO List </title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 </head>
+
 <body>
 	<div id='root' class="container"></div>
-
 	<script src="https://fb.me/react-15.0.1.js"></script>
 	<script src="https://fb.me/react-dom-15.0.1.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+	<script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 	<script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
-	
 	<!--Bundled file-->
     <script src="/bundle.js"></script>
-	
-	<!-- For Ajax calls -->
-	
 </body>
 </html>
